# LC29H-GPS-

./: CMakeLists.txt  README.md  README.rst  nrf9151dk_nrf9151_ns.overlay  prj.conf  sample.yaml
src/: gps.c  gps.h  main.c  nmea.c  nmea.h  shellnmea.c  shellnmea.h
